gcc/testsuite/gdc.test/fail_compilation/fail5953a2.d
void main()
{
    auto a3 = [,,,];    // invalid, but compiles
}
